tdf#163618 editeng: Fix excessive overlap in justified Arabic script

Fixes a bug causing editeng to insert kashida glyphs in positions where
there is not enough space for them. The root cause was failing to
account for the extra space used by blanks while rejecting candidate
kashida positions.

Change-Id: I1e22f758af0a88c2070f31cca040570f3a730c08
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184282
Tested-by: Jenkins
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
(cherry picked from commit 3c9fdd9aeb74d76ef7f1c0581582439c8a135532)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184490
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>